<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">Flash VPN</string>
    <string name="key_string" translatable="false">adccerd3indd2f</string>
    <string name="app_slogan">Flash &amp; Secure VPN </string>
    <string name="menu_item_toggle_global">Toggle global mode</string>
    <string name="menu_item_switch">Proxy</string>
    <string name="menu_item_about">About</string>
    <string name="menu_item_exit">Exit</string>
    <string name="config_url">Config URL</string>
    <string name="config_not_set_value">Not set</string>
    <string name="config_url_scan">Scan an QR code</string>
    <string name="config_url_manual">Type manually</string>
    <string name="config_url_scan_hint">Scan the QR code of your config url</string>
    <string name="select_app">Select Apps for VPN</string>
    <string name="select_app_detail">Enable VPN only for selected apps</string>
    <string name="proxied_apps">Per-App Proxy</string>
    <string name="btn_ok">OK</string>
    <string name="btn_cancel">Cancel</string>
    <string name="btn_more">More&#8230;</string>
    <string name="vpn_connected_status">connected</string>
    <string name="vpn_disconnected_status">disconnected</string>
    <string name="about_info">Shadowsocks-android is writen by dawei. It could run on any Android 4.0+ device , no need to root, and it is modified based on SmartProxy and Shadowsocks-Java</string>
    <string name="exit_confirm_info">This will disconnect the VPN connection, Are you sure to exit?</string>
    <string name="err_invalid_url">The config URL is invalid.</string>
    <string name="config_url_hint">ss://method:password@host:port</string>
    <string name="faq">FAQ</string>
    <string name="notification_connected">Connected</string>
    <string name="notification_to_connect">Tap to connect</string>
    <string name="connect">Connect</string>
    <string name="stop">Stop</string>
    <string name="connecting">Connecting</string>
    <string name="acquiring_port">Allocating resources</string>
    <string name="checking_port">Checking server</string>
    <string name="reward_text_no_premium_time">Click to get premium proxy and bandwidth!</string>
    <string name="reward_text_no_premium_time_watch_ad">Watch reward video to get free premium server reward!</string>
    <string name="get_reward_premium_time">You are rewarded premium server time!</string>
    <string name="reward_text_has_premium_time_watch_ad">You have %s premium time. Watch a reward video to get more!</string>
    <string name="reward_text_has_premium_time">You have %s premium time. Click to get higher proxy speed!</string>
    <string name="reward_text_vip">You are premium user now! Enjoy best proxy speed!</string>
    <string name="connecting_tip1">Optimizing server connection ...</string>
    <string name="connecting_tip2">Encrypting network traffic ...</string>
    <string name="connecting_tip_success">Already connected to server.</string>
    <string name="retry">RETRY</string>
    <string name="retry_tips">Please check your network setting and try again!</string>
    <string name="feedback">Feedback</string>
    <string name="button_submit">Submit</string>
    <string name="submit_success">Thanks for providing feedback!</string>
    <string name="text_proxy_allapp">Enable VPN proxy for all apps</string>
    <string name="text_proxy_allapp_description">Switch to turn on/off global VPN for all apps</string>
    <string name="text_proxy_app">Select the app you want to proxy</string>
    <string name="settings">Settings</string>
    <string name="about">About</string>
    <string name="user_activity_title">VIP Center</string>
    <string name="user_center">User Center</string>
    <string name="user_center_detail">Click to check user privileges</string>
    <string name="check_update"><u>Check Update</u></string>
    <string name="become_vip_tips1">Remove all ads</string>
    <string name="become_vip_tips2">Unlimited network traffic and bandwidth</string>
    <string name="become_vip_tips3">Premium proxy server worldwide</string>
    <string name="become_vip_tips4">Encrypted communication for security</string>
    <string name="become_vip">Become VIP user of Flash VPN</string>
    <string name="settings_join_us">Join our community</string>
    <string name="settings_follow_us">Follow us</string>
    <string name="settings_privacy_policy">Privacy Policy</string>
    <string name="settings_terms_of_service">Terms of Service</string>
    <string name="settings_terms_text">Terms of Service and Privacy Policy</string>
    <string name="settings_right" translatable="false">RiverStone Tech All rights reserved</string>
    <string name="yes">Yes</string>
    <string name="no_thanks">No, thanks!</string>
    <string name="settings_start_onboot_title">Auto-start VPN on system boot up</string>
    <string name="settings_vip_title">Premium VPN service</string>
    <string name="settings_vip_description">Become VIP user to enjoy unlimited network bandwidth</string>
    <string name="settings_start_onboot_description">Start VPN service automatically when android startup</string>


    <string name="feedback_hint">Please tell us the detail about the problem you met , and please tell us the steps to reproduce it and better with screenshot.</string>
    <string name="star_rating">Go 5-star rating now</string>
    <string name="dialog_love_title">Love Flash VPN</string>
    <string name="dialog_love_content">Would you mind give us a 5-star rating on the Play Store? It will inspire us and we appreciate your support!</string>
    <string name="feedback_no_description">Description can not be empty!</string>
    <string name="feedback_go_faq">Click here to check our handy FAQ.</string>
    <string name="extra_feedback_decription">We will resolve the issue for you ASAP and appreciate your help to improve the product!</string>
    <string name="share_with_friends_tip">I am glad to invite you to use this wonderful VPN proxy %s. You can download it here:</string>
    <string name="share_with_friends">Share With Friends</string>
    <string name="select_server_title">Select Server</string>
    <string name="select_server_auto">Auto</string>
    <string name="contact_dev_team"><u>Contact developer team</u></string>
    <string name="free_trial_text">+%d days free trial</string>

    <array name="navigationItem">
        <item name="navigation_notifications">Apps Using VPN</item>
        <item name="navigation_notifications">User Center</item>
        <item name="navigation_FAQ">FAQ</item>
        <item name="navigation_feedback">Feedback</item>
        <item name="navigation_rate_us">Like it</item>
        <item name="navigation_share">Share with friends</item>
        <item name="navigation_setting">About</item>
    </array>

    <array name="faqTitle">
        <item name="faq_t1">Why do I need a VPN?</item>
        <item name="faq_t2">How to use Flash VPN?</item>
        <item name="faq_t3">Why does Flash VPN fail to connect?</item>
        <item name="faq_t4">How can Flash VPN protect my data?</item>
        <item name="faq_t5">How can I benefit if I subscribe premium service?</item>
    </array>

    <array name="faqAnswer">
        <item name="faq_t1">VPN is Virtual Private Network. By using VPN, you can use public Wi-Fi
            securely. What's more, VPN can help you access the website which is blocked by your
            network vendor.
        </item>
        <item name="faq_t2">Just tap connect button in the home screen. Flash VPN will automatically
            connect to the best server and encrypt your data transportation. You can also select
            server if you have preferred server location.
        </item>
        <item name="faq_t3">1)Please check your internet connection 2)Refresh the servers to check
            the signal 3)Retry connect and check other servers 4)If all methods not work, please
            send a feedback email to us. Our engineer will timely resolve the issue.
        </item>
        <item name="faq_t4">Different from most VPN application in the market, Flash VPN will encrypt
            all data transportation automatically. Your message cannot be intercepted by any other
            spy.
        </item>
        <item name="faq_t5">With the premium service, we will remove all ads from this app.
            Meanwhile, many premium servers is only open to premium users worldwide and we will
            allocate dedicate bandwidth when you connected.
        </item>
    </array>

    <!-- update & about -->
    <string name="update_dialog_title">Update</string>
    <string name="update_dialog_content">New version is coming! We improved a lot on version %s. Would you like to update FlashVPN now?</string>
    <string name="update_dialog_left">Ignore this version</string>
    <string name="update_dialog_right">Update</string>

    <string name="title_activity_ad_test">AdTestActivity</string>
</resources>
